3º Ano 2º Semestre/Compiladores/Projeto/programs/ipdrawParser.py
# Generated from ipdraw.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ipdrawParser ( Parser ):

    grammarFileName = "ipdraw.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'position'", "'='", "';'", 
                     "'color'", "'orientation'", "'\\u00BA'", "'rad'", "'thickness'", 
                     "'pressure'", "'down'", "'up'", "'forward'", "'backward'", 
                     "'left'", "'right'", "'pause'", "','", "'('", "')'", 
                     "'not'", "'!'", "'and'", "'&&'", "'or'", "'||'", "'xor'", 
                     "'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'*'", 
                     "'/'", "'//'", "'%'", "'\\'", "'**'", "'+'", "'-'", 
                     "'if'", "'until'", "'->'", "'stdout'", "'interactador'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Color", "TYPE", "ID", "INT", "REAL", "BOOL", "STRING", 
                      "RGBHex", "Comment", "WS" ]

    RULE_program = 0
    RULE_stat = 1
    RULE_penCommand = 2
    RULE_varAssignment = 3
    RULE_varDeclaration = 4
    RULE_expr = 5
    RULE_if = 6
    RULE_until = 7
    RULE_print = 8
    RULE_pause = 9
    RULE_interactador = 10
    RULE_point = 11

    ruleNames =  [ "program", "stat", "penCommand", "varAssignment", "varDeclaration", 
                   "expr", "if", "until", "print", "pause", "interactador", 
                   "point" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    Color=48
    TYPE=49
    ID=50
    INT=51
    REAL=52
    BOOL=53
    STRING=54
    RGBHex=55
    Comment=56
    WS=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ipdrawParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatContext,i)


        def getRuleIndex(self):
            return ipdrawParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ipdrawParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 19870374137691338) != 0):
                self.state = 24
                self.stat()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(ipdrawParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ipdrawParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Stat_varAssignmentContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varAssignment(self):
            return self.getTypedRuleContext(ipdrawParser.VarAssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_varAssignment" ):
                listener.enterStat_varAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_varAssignment" ):
                listener.exitStat_varAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_varAssignment" ):
                return visitor.visitStat_varAssignment(self)
            else:
                return visitor.visitChildren(self)


    class Stat_UntilContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def until(self):
            return self.getTypedRuleContext(ipdrawParser.UntilContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_Until" ):
                listener.enterStat_Until(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_Until" ):
                listener.exitStat_Until(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_Until" ):
                return visitor.visitStat_Until(self)
            else:
                return visitor.visitChildren(self)


    class Stat_pauseContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pause(self):
            return self.getTypedRuleContext(ipdrawParser.PauseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_pause" ):
                listener.enterStat_pause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_pause" ):
                listener.exitStat_pause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_pause" ):
                return visitor.visitStat_pause(self)
            else:
                return visitor.visitChildren(self)


    class Stat_ifContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_(self):
            return self.getTypedRuleContext(ipdrawParser.IfContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_if" ):
                listener.enterStat_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_if" ):
                listener.exitStat_if(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_if" ):
                return visitor.visitStat_if(self)
            else:
                return visitor.visitChildren(self)


    class Stat_printContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_(self):
            return self.getTypedRuleContext(ipdrawParser.PrintContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_print" ):
                listener.enterStat_print(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_print" ):
                listener.exitStat_print(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_print" ):
                return visitor.visitStat_print(self)
            else:
                return visitor.visitChildren(self)


    class Stat_interactadorContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def interactador(self):
            return self.getTypedRuleContext(ipdrawParser.InteractadorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_interactador" ):
                listener.enterStat_interactador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_interactador" ):
                listener.exitStat_interactador(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_interactador" ):
                return visitor.visitStat_interactador(self)
            else:
                return visitor.visitChildren(self)


    class Stat_penCmdContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def penCommand(self):
            return self.getTypedRuleContext(ipdrawParser.PenCommandContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_penCmd" ):
                listener.enterStat_penCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_penCmd" ):
                listener.exitStat_penCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_penCmd" ):
                return visitor.visitStat_penCmd(self)
            else:
                return visitor.visitChildren(self)


    class Stat_CurlyContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ipdrawParser.StatContext)
            else:
                return self.getTypedRuleContext(ipdrawParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_Curly" ):
                listener.enterStat_Curly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_Curly" ):
                listener.exitStat_Curly(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_Curly" ):
                return visitor.visitStat_Curly(self)
            else:
                return visitor.visitChildren(self)


    class Stat_varDeclarationContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varDeclaration(self):
            return self.getTypedRuleContext(ipdrawParser.VarDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_varDeclaration" ):
                listener.enterStat_varDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_varDeclaration" ):
                listener.exitStat_varDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_varDeclaration" ):
                return visitor.visitStat_varDeclaration(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = ipdrawParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = ipdrawParser.Stat_penCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.penCommand()
                pass

            elif la_ == 2:
                localctx = ipdrawParser.Stat_ifContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.if_()
                pass

            elif la_ == 3:
                localctx = ipdrawParser.Stat_UntilContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.until()
                pass

            elif la_ == 4:
                localctx = ipdrawParser.Stat_printContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.print_()
                pass

            elif la_ == 5:
                localctx = ipdrawParser.Stat_CurlyContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 36
                self.match(ipdrawParser.T__0)
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 19870374137691338) != 0):
                    self.state = 37
                    self.stat()
                    self.state = 42
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 43
                self.match(ipdrawParser.T__1)
                pass

            elif la_ == 6:
                localctx = ipdrawParser.Stat_varAssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 44
                self.varAssignment()
                pass

            elif la_ == 7:
                localctx = ipdrawParser.Stat_varDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 45
                self.varDeclaration()
                pass

            elif la_ == 8:
                localctx = ipdrawParser.Stat_pauseContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 46
                self.pause()
                pass

            elif la_ == 9:
                localctx = ipdrawParser.Stat_interactadorContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 47
                self.interactador()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PenCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ipdrawParser.RULE_penCommand

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PenCmd_upContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_up" ):
                listener.enterPenCmd_up(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_up" ):
                listener.exitPenCmd_up(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_up" ):
                return visitor.visitPenCmd_up(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_leftContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.penRotateUnits = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ipdrawParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_left" ):
                listener.enterPenCmd_left(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_left" ):
                listener.exitPenCmd_left(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_left" ):
                return visitor.visitPenCmd_left(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_thicknessContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ipdrawParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_thickness" ):
                listener.enterPenCmd_thickness(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_thickness" ):
                listener.exitPenCmd_thickness(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_thickness" ):
                return visitor.visitPenCmd_thickness(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_downContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_down" ):
                listener.enterPenCmd_down(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_down" ):
                listener.exitPenCmd_down(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_down" ):
                return visitor.visitPenCmd_down(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_rightContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.penRotateUnits = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ipdrawParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_right" ):
                listener.enterPenCmd_right(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_right" ):
                listener.exitPenCmd_right(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_right" ):
                return visitor.visitPenCmd_right(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_posContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def point(self):
            return self.getTypedRuleContext(ipdrawParser.PointContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_pos" ):
                listener.enterPenCmd_pos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_pos" ):
                listener.exitPenCmd_pos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_pos" ):
                return visitor.visitPenCmd_pos(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_pauseContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ipdrawParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_pause" ):
                listener.enterPenCmd_pause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_pause" ):
                listener.exitPenCmd_pause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_pause" ):
                return visitor.visitPenCmd_pause(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_colorContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Color(self):
            return self.getToken(ipdrawParser.Color, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_color" ):
                listener.enterPenCmd_color(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_color" ):
                listener.exitPenCmd_color(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_color" ):
                return visitor.visitPenCmd_color(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_forwardContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ipdrawParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_forward" ):
                listener.enterPenCmd_forward(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_forward" ):
                listener.exitPenCmd_forward(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_forward" ):
                return visitor.visitPenCmd_forward(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_backwardContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ipdrawParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_backward" ):
                listener.enterPenCmd_backward(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_backward" ):
                listener.exitPenCmd_backward(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_backward" ):
                return visitor.visitPenCmd_backward(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_orientationContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.penRotateUnits = None # Token
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ipdrawParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_orientation" ):
                listener.enterPenCmd_orientation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_orientation" ):
                listener.exitPenCmd_orientation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_orientation" ):
                return visitor.visitPenCmd_orientation(self)
            else:
                return visitor.visitChildren(self)


    class PenCmd_pressureContext(PenCommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ipdrawParser.PenCommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ipdrawParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPenCmd_pressure" ):
                listener.enterPenCmd_pressure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPenCmd_pressure" ):
                listener.exitPenCmd_pressure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPenCmd_pressure" ):
                return visitor.visitPenCmd_pressure(self)
            else:
                return visitor.visitChildren(self)



    def penCommand(self):

        localctx = ipdrawParser.PenCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_penCommand)
        self._la = 0 # Token type
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                localctx = ipdrawParser.PenCmd_posContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(ipdrawParser.T__2)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 51
                    self.match(ipdrawParser.T__3)


                self.state = 54
                self.point()
                self.state = 55
                self.match(ipdrawParser.T__4)
                pass
            elif token in [6]:
                localctx = ipdrawParser.PenCmd_colorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.match(ipdrawParser.T__5)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 58
                    self.match(ipdrawParser.T__3)


                self.state = 61
                self.match(ipdrawParser.Color)
                self.state = 62
                self.match(ipdrawParser.T__4)
                pass
            elif token in [7]:
                localctx = ipdrawParser.PenCmd_orientationContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.match(ipdrawParser.T__6)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 64
                    self.match(ipdrawParser.T__3)


                self.state = 67
                self.expr(0)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8 or _la==9:
                    self.state = 68
                    localctx.penRotateUnits = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==8 or _la==9):
                        localctx.penRotateUnits = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 71
                self.match(ipdrawParser.T__4)
                pass
            elif token in [10]:
                localctx = ipdrawParser.PenCmd_thicknessContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.match(ipdrawParser.T__9)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 74
                    self.match(ipdrawParser.T__3)


                self.state = 77
                self.expr(0)
                self.state = 78
                self.match(ipdrawParser.T__4)
                pass
            elif token in [11]:
                localctx = ipdrawParser.PenCmd_pressureContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.match(ipdrawParser.T__10)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 81
                    self.match(ipdrawParser.T__3)


                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(ipdrawParser.T__4)
                pass
            elif token in [12]:
                localctx = ipdrawParser.PenCmd_downContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.match(ipdrawParser.T__11)
                self.state = 88
                self.match(ipdrawParser.T__4)
                pass
            elif token in [13]:
                localctx = ipdrawParser.PenCmd_upContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 89
                self.match(ipdrawParser.T__12)
                self.state = 90
                self.match(ipdrawParser.T__4)
                pass
            elif token in [14]:
                localctx = ipdrawParser.PenCmd_forwardContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 91
                self.match(ipdrawParser.T__13)
                self.state = 92
                self.expr(0)
                self.state = 93
                self.match(ipdrawParser.T__4)
                pass
            elif token in [15]:
                localctx = ipdrawParser.PenCmd_backwardContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 95
                self.match(ipdrawParser.T__14)
                self.state = 96
                self.expr(0)
                self.state = 97
                self.match(ipdrawParser.T__4)
                pass
            elif token in [16]:
                localctx = ipdrawParser.PenCmd_leftContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 99
                self.match(ipdrawParser.T__15)
                self.state = 100
                self.expr(0)
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8 or _la==9:
                    self.state = 101
                    localctx.penRotateUnits = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==8 or _la==9):
                        localctx.penRotateUnits = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

